Reduces maximum user name length to improve layout issues.

--- a/src/Draw/Client/Components/WordChoiceOverlay.razor.css
+++ b/src/Draw/Client/Components/WordChoiceOverlay.razor.css
@@ -16,6 +16,8 @@ h2 {
     color: #ffffff;
     font-size: 30px;
     font-weight: bold;
+    margin-right: 50px;
+    margin-left: 50px;
 }
 
 p {
